kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
      - name: analytics
        image: 337689099048.dkr.ecr.ap-southeast-1.amazonaws.com/analytics:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
